--- a/assets/main.css
+++ b/assets/main.css
@@ -17,13 +17,12 @@ body {
   z-index: 2;
 }
 h1 {
-  font-size: 42px;
-  font-family: 'Indie Flower', 'helvetica', sans-serif;
+  font-size: 2.5rem;
   margin: 0;
 }
 p {
-  font-size: 20px;
-  line-height: 32px;
+  font-size: 1.3rem;
+  line-height: 2rem;
 }
 a {
   color: #666;
@@ -42,9 +41,8 @@ a:hover {
   right: 0;
   box-sizing: border-box;
   padding: 2rem;
-  min-height: 6rem;
+  min-height: 6.5rem;
   background: #27303b;
-  color: #526173;
   color: #c9bbc9;
 }
 .footer a {
@@ -74,7 +72,7 @@ a:hover {
 .icon {
   border: none;
   font-size: 21px;
-  margin: 0 0.75rem;
+  margin: 0 0.6rem;
 }
 .icon:hover {
   border: none;
@@ -93,8 +91,15 @@ canvas {
 /* Medium views */
 @media (min-width: 600px) {
   .content {
-    top: 15vh;
+    top: 20vh;
     width: 60vw;
+  }
+  h1 {
+    font-size: 3.75rem;
+  }
+  p {
+    font-size: 1.5rem;
+    line-height: 2.8rem;
   }
   .footer-copyright {
     display: inline-block;
